# projeto-dos-bixos-semear

./: CMakeLists.txt  sdkconfig.esp32doit-devkit-v1
ESP_32/lib/PID/: PID.c
ESP_32/lib/comunicacao/: uart_esp32.c  uart_esp32.h
ESP_32/lib/encoder/: encoder.c  encoder.h
ESP_32/lib/h_bridge/: h_bridge.c  h_bridge.h
ESP_32/src/: main.c
RaspberryPi_ROS/src/driver/: package.xml  setup.cfg  setup.py
RaspberryPi_ROS/src/driver/driver/: driver_note.py  hardware_interface.py
lib/PID/: PID.h  pid_controller.c  pid_controller.h
lib/encoders/: encoder.c  encoder.h  encoder_control.c  encoder_control.h  encoder_control_H
lib/hbridge/: h_bridge.c  h_bridge.h  pid.h
src/: main  main.c
